--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^2.13.11",
+    "font-awesome": "^4.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-fontawesome": "^1.6.1",
+    "react-scripts": "1.0.17",
+    "react-tilt": "^0.1.4",
+    "toastr": "^2.1.2",
+    "vanilla-tilt": "^1.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
