--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "antd": "^2.13.11",
     "antd-init": "^2.0.6",
+    "firebase": "^4.8.0",
     "font-awesome": "^4.7.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -12,7 +13,7 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
     "react-tilt": "^0.1.4",
-    "toastr": "^2.1.2",
+    "toastr": "^2.1.4",
     "vanilla-tilt": "^1.4.1"
   },
   "scripts": {
