--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "antd-init": "^2.0.6",
     "firebase": "^4.8.0",
     "font-awesome": "^4.7.0",
+    "owl.carousel": "^2.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fontawesome": "^1.6.1",
+    "react-owl-carousel": "^2.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-scroll-parallax": "^1.2.0",
     "react-scrollreveal": "^1.1.2",
     "react-tilt": "^0.1.4",
     "toastr": "^2.1.4",
